# longitudinal_usability_id_signing

./: .gitignore  ARTIFACT.md  pyproject.toml  readme.md  requirements.txt
LLM Prompts/: Specific Instructions.docx  Usability Coding Heuristics.docx  Usability Coding Heuristics_UPDATED.docx
data/agreement/: Agreement_check__Error_Rate_60__-_UPDATED_after_manual_semantic_matches.csv  Phase_2_agreement__batch_60___my_labels_vs_human_Usability_non-usability_type.csv  Phase_3_reliability__notation_usability_issues_.csv
data/phase3/: Keyfactor__ejbca-ce___non-human_phase3_labeled.xlsx  Keyfactor__signserver-ce___non-human_phase3_labeled.xlsx  hashicorp__vault___non-human_phase3_labeled.xlsx  notaryproject__notation___non-human_phase3_labeled.xlsx  openpubkey__openpubkey___non-human_phase3_labeled.xlsx  sigstore__cosign___non-human_phase3_labeled.xlsx  sigstore__fulcio___non-human_phase3_labeled.xlsx  sigstore__rekor___non-human_phase3_labeled.xlsx
idtools_usability/: __init__.py  cli.py
issue_collections/: export_issues_discussions.py
outputs/: RESULTS_MANIFEST.csv
outputs copy/: RESULTS_MANIFEST.csv
outputs copy/tables/: aggregate_poisson_expected_counts_associated_component_curves.csv  aggregate_poisson_expected_counts_associated_component_slopes.csv  counts_L1_Theme_by_tool_long.csv  (+37 more)
scripts/: __init__.py  analyze_phase3_themes.py  analyze_reliability.py  build_phase3_theme_codebook_table.py  build_results_manifest.py  compute_binary_chi_by_theme.py  make_pub_rq3_figs.py  plot_raw_monthly_usability_by_tool.py  regenerate_artifact.sh  trend_poisson_phase3.py
(+64 files in other folders)
